kubernetes/namespace/app/certificates/certificates.yaml
# LOCATION: /etc/letsencrypt/live/bitmemo.io/
#
# apiVersion: v1
# kind: Secret
# type: generic
# metadata:
#   name: certificate-secret
#   namespace: app
# data:
#   # Generally cert.pem and privkey.pem are needed by webservers for https
#   cert.pem: ""
#   chain.pem: ""
#   fullchain.pem: ""
#   privkey.pem: "" # empty since this will be filled by job
#---
# LOCATION: /etc/letsencrypt/renewal/bitmemo.io.conf
#
# apiVersion: v1
# kind: Secret
# type: generic
# metadata:
#   name: letsencrypt-config
#   namespace: app
# data:
#   bitmemo.io.conf: ""
---
apiVersion: v1
kind: Service
metadata:
  name: certificate-renewal
  namespace: app
spec:
  selector:
    name: certificate-renewal
  ports:
    - port: 80
      targetPort: 80
