kubernetes/namespace/app/certificates/cert-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: certificate-renewal
  namespace: app
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`bitmemo.io`) && PathPrefix(`/.well-known/acme-challenge/`)
      services:
        - name: certificate-renewal
          port: 80
  # tls: {} # Not required, this is certificate renewal
